# linode-cli

./: .dockerignore  .gitignore  .gitmodules  .pylintrc  .python-version  .replit  CODEOWNERS  Dockerfile  Dockerfile-bats  Dockerfile-release  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  cli.py  linode-cli  linode.sh  openapi.yaml  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  resolve_spec_url  setup.py  version
.github/: dependabot.yml  labels.yml  pull_request_template.md  release-drafter.yml  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml
.github/workflows/: ci.yml  clean-release-notes.yml  codeql.yml  dependency-review.yml  docker-build.yml  documentation.yml  e2e-suite-pr-command.yml  e2e-suite-pr-win-command.yml  e2e-suite-pr-win.yml  e2e-suite-pr.yml  e2e-suite-windows.yml  e2e-suite.yml  labeler.yml  nightly-smoke-tests.yml  oci-build.yml  publish-docs.yml  publish-oci.yml  publish-pypi.yml  publish-wiki.yml  pull-request.yml  python-publish.yml  release-drafter.yml  release-notify-slack.yml  release.yml  test-win-python.yml  (+4 more)
docs/: conf.py  index.rst
linodecli/: __init__.py  __main__.py  api_request.py  arg_helpers.py  args.py  cli.py  completion.py  config.py  configuration.py  exit_codes.py  help.py  help_formatter.py  help_pages.py  helpers.py  oauth-landing-page.html  operation.py  output.py  overrides.py  response.py  version.py
scripts/: add_to_xml_test_report.py  cibuild.sh  cipublish.sh  cleanup.sh  lke-policy.yaml  lke_calico_rules_e2e.sh  test.sh
test/: .env.example  clean-accounts.sh  common.bash  test-runner.sh
tests/: api_request.py  completion.py  configuration.py  conftest.py  populators.py  test_api_request.py  test_args.py  test_cli.py  test_help_alias.py  test_helpers.py  test_output.py  test_plugin_obj.py  test_populators.py  test_response.py
wiki/: Configuration.md  Development.md  Home.md  Installation.md  OpenAPI Extensions.md  Output.md  Plugins.md  Testing.md  Uninstallation.md  Usage.md  _Sidebar.md
(+266 files in other folders)
